# DC2

./: DC2.py  FLIR.py  FLIRwrapperBB.py  LEMBox.py  Microphone.py  README.md  RSI.py  Thermocouple.py  Xiris.py
LemBox/: LEMBOX.C
Xiris/: CMakeLists.txt  XIR-1800Collection.cpp
